@@ -1,3 +1,5 @@
+- Refactor: Remove usage of deprecated shift types
+
 6.20.3 (23-10-2020)
 - Refactor: Remove usage of deprecated SchoolClass name method
 
